# cdp-mapping-systems

./: .env.example  .gitignore  MIGRATION_PLAN.md  README.md  _config.yml  _toc.yml  astro.config.mjs  intro.md  myst.yml  package-lock.json  package.json  pyproject.toml  requirements-build.txt  requirements.txt  resources.config.ts  tsconfig.json  wrangler.jsonc
.github/workflows/: static.yml
Assignment_Descriptions/: 00_Getting_Started.md
Assignments/: 01_Loading_Visualizing.md
Book/output_book/: _toc.yml
Syllabus/: syllabus.md
Tutorials/: 00_Getting_Started.md  01_vector_data_apis.ipynb  02_geoprocessing.ipynb  03_networks.ipynb  04_change.ipynb  05_web_mapping.md  citibike.ipynb
Tutorials/sample_book/: _toc.yml
Tutorials/subway_graph/: index.html  nyc_subway_edges.geojson  nyc_subway_stations.csv  nyc_subway_stations.geojson  subway_edges.csv  subway_graph_traversal.ipynb  subway_nodes.csv  subway_nodes.qmd
cdptools/: utils.py
content/: utls.py
content/Assignments/: 03-networks.md
content/Syllabus/: syllabus.md
content/Tutorials/: 00_Getting_Started.md  01_vector_data_apis.ipynb  02_flood_vulnerability_proportional_split.ipynb  02_geoprocessing.ipynb  03_networks.ipynb  04_calculating_landcover_change.ipynb  04_networks.ipynb  06_preprocess_census_data.ipynb  07_vector_data_apis.ipynb  09_calculating_landcover_change.ipynb  citibike.ipynb  comparing-census-variables.ipynb  flood_vulnerability_proportional_split.ipynb  prep_census_data.ipynb  (+2 more)
scripts/: build-content.py  fetch-arena.ts  fetch-github.ts  fetch-zotero.ts
src/: content.config.ts
(+23 files in other folders)
